@@ -4,6 +4,7 @@
 - Prevent weapons from becoming unequipped when switching weapon sets
 - Only allow weapons with attack actions and attacks for weapon sets
 - Remove background skills from drawer when not active
+- Fix movement calculation for diagonals
 
 ## 0.9.4
 - Top-align portrait tooltips to avoid overlapping actual text
